--- a/NuiOS/Base.lproj/Profile.storyboard
+++ b/NuiOS/Base.lproj/Profile.storyboard
@@ -28,7 +28,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="199.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Uxc-WQ-JQN">
+                                                <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Uxc-WQ-JQN">
                                                     <rect key="frame" x="127" y="40" width="120" height="120"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="120" id="LwN-53-bMy"/>
@@ -140,6 +140,9 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        <connections>
+                                            <segue destination="J97-wH-jaZ" kind="presentation" id="YJg-V0-kbW"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -198,6 +201,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QBZ-9O-W6j" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="750" y="219"/>
+        </scene>
+        <!--PasswordUpdate-->
+        <scene sceneID="AKl-kL-OIZ">
+            <objects>
+                <viewControllerPlaceholder storyboardName="PasswordUpdate" id="J97-wH-jaZ" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Z3u-Z8-ie1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="727" y="268"/>
         </scene>
     </scenes>
 </document>
